# email_mcp

./: .env.example  .gitignore  .mcpbignore  LICENSE  README.md  TASK5_IMPLEMENTATION_SUMMARY.md  TASK6_IMPLEMENTATION_SUMMARY.md  auth.py  config.py  email-mcp.service  email_mcp.mcpb  generate_icon.py  main.py  manifest.json  mcp_server.py  pyproject.toml  requirements.txt
imap/: __init__.py  attachments.py  client.py  flags.py  read.py  search.py
smtp/: __init__.py  attachments.py  client.py
tests/: __init__.py  test_attachment_integration.py  test_attachment_utils.py  test_auth.py  test_config.py  test_download_attachment.py  test_flags.py  test_imap_client.py  test_integration.py  test_mcp_server_import.py  test_read.py  test_reply.py  test_search.py  test_send.py  test_send_with_attachments.py  test_smtp_client.py
tools/: __init__.py  definitions.py  handlers.py  mcp_routes.py
utils/: __init__.py  attachment_utils.py
